--- a/src/main/resources/views/CentroEducativo.fxml
+++ b/src/main/resources/views/CentroEducativo.fxml
@@ -12,42 +12,47 @@
 <VBox prefHeight="580.0" prefWidth="886.0" spacing="10" style="-fx-padding: 20;" stylesheets="@../styles/tabla_alumnos.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CentroEducativoController">
 
     <!-- Título -->
-    <Label styleClass="txt_alulmnos" text="Tabla de Alumnos" textFill="WHITE" />
+    <Label styleClass="txt_alulmnos" text="Tabla de Centros Educativos" textFill="WHITE" />
 
     <!-- Botones en línea -->
     <HBox spacing="10">
-        <Button fx:id="btnNuevoAlumno" mnemonicParsing="false" onAction="#btnActionCentroEducativo" styleClass="btnNuevoCentroEducativo" text="Nuevo Alumno" textFill="WHITE">
+        <Button fx:id="btnNuevoCentro" mnemonicParsing="false" onAction="#btnActionNuevoCentro" styleClass="btnNuevoAlumno" text="Nuevo Centro" textFill="WHITE">
             <graphic>
                 <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
             </graphic>
         </Button>
-        <Button fx:id="btnEliminarAlumno" mnemonicParsing="false" onAction="#btnActionEliminarCentrosEducativos" styleClass="btnEliminarCentroEducativo" text="Eliminar Alumno">
+        <Button fx:id="btnEliminarCentro" mnemonicParsing="false" onAction="#btnActionEliminarCentro" styleClass="btnEliminarAlumnoSeleccionado" text="Eliminar Centro">
             <graphic>
                 <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
             </graphic>
         </Button>
-        <Button fx:id="btnEliminarTodos" mnemonicParsing="false" onAction="#btnActionEliminarTodosCentrosEducativos" styleClass="btnEliminarTodosCentroEducativo" text="Eliminar Todos">
+        <Button fx:id="btnEliminarTodosCentros" mnemonicParsing="false" onAction="#btnActionEliminarTodosCentros" styleClass="btnEliminarTodosLosAlumnos" text="Eliminar Todos">
             <graphic>
                 <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
             </graphic>
         </Button>
     </HBox>
-    
+
     <!-- Barra de búsqueda -->
- 
     <HBox spacing="10">
         <Label contentDisplay="RIGHT" prefHeight="35.0" prefWidth="60.0" styleClass="txtbuscar" text="Buscar:" textAlignment="RIGHT" textFill="white" />
         <TextField fx:id="txtBuscar" prefHeight="35.0" prefWidth="423.0" promptText="Escribe para buscar..." styleClass="campo_busqueda" />
-        <Button fx:id="btnBuscar" onAction="#btnBuscarAction" prefHeight="35.0" text="Buscar" />
+        <Button fx:id="btnBuscarCentro" onAction="#btnBuscarCentroAction" prefHeight="35.0" text="Buscar" />
     </HBox>
 
     <!-- Tabla -->
     <TableView fx:id="tablaCentroEducativos" prefHeight="500.0" styleClass="tabla_Alumnos" VBox.vgrow="ALWAYS">
         <columns>
-            <TableColumn fx:id="colCodigo" prefWidth="143.0" styleClass="Columna-Codigo" text="Código Alumno" />
-            <TableColumn fx:id="colNombre" prefWidth="221.0" styleClass="Columna-nombre" text="Nombre" />
-            <TableColumn fx:id="colCurso" prefWidth="236.0" styleClass="Columna-Curso" text="Curso" />
-            <TableColumn fx:id="colCodigoSede" prefWidth="235.0" styleClass="Columna-Sede" text="Código Sede" />
+            <TableColumn fx:id="colCodigoCentro" prefWidth="100.0" text="Código Centro" />
+            <TableColumn fx:id="colNombre" prefWidth="150.0" text="Nombre" />
+            <TableColumn fx:id="colCalle" prefWidth="150.0" text="Calle" />
+            <TableColumn fx:id="colLocalidad" prefWidth="100.0" text="Localidad" />
+            <TableColumn fx:id="colCP" prefWidth="80.0" text="C.P." />
+            <TableColumn fx:id="colMunicipio" prefWidth="120.0" text="Municipio" />
+            <TableColumn fx:id="colProvincia" prefWidth="120.0" text="Provincia" />
+            <TableColumn fx:id="colTelefono" prefWidth="120.0" text="Teléfono" />
+            <TableColumn fx:id="colEmail" prefWidth="180.0" text="Email" />
         </columns>
     </TableView>
+
 </VBox>
