--- a/src/main/resources/views/EditarCentroEducativo.fxml
+++ b/src/main/resources/views/EditarCentroEducativo.fxml
@@ -1,14 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EditarCentroEducativoController">
-    <stylesheets>
-        <URL value="@/styles/editarcentroeducativo.css"/>
-    </stylesheets>
+<AnchorPane id="AnchorPane" prefHeight="460.0" prefWidth="540.0" styleClass="panel-agregar-alumnos" stylesheets="@/styles/editarcentroeducativo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EditarCentroEducativoController">
+    <children>
+
+        <!-- Título -->
+        <Text layoutX="120.0" layoutY="45.0" styleClass="txt_titulo_Agregar" text="Editar Centro Educativo">
+            <font>
+                <Font size="28.0" />
+            </font>
+        </Text>
+
+        <!-- Formulario -->
+        <GridPane layoutX="50.0" layoutY="60.0" hgap="20.0" vgap="10.0" prefWidth="440.0">
+            <padding>
+                <Insets top="10" bottom="10" left="10" right="10"/>
+            </padding>
+
+            <!-- Código Centro -->
+            <Label text="Código:" styleClass="txt_Nombre" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+            <TextField fx:id="txtCodigo" promptText="Código" styleClass="input-agregarcentro" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+
+            <!-- Nombre -->
+            <Label text="Nombre:" styleClass="txt_Nombre" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+            <TextField fx:id="txtNombre" promptText="Nombre" styleClass="input-agregarcentro" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+
+            <!-- Calle -->
+            <Label text="Calle:" styleClass="txt_Nombre" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+            <TextField fx:id="txtCalle" promptText="Calle" styleClass="input-agregarcentro" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+
+            <!-- Localidad -->
+            <Label text="Localidad:" styleClass="txt_Nombre" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+            <TextField fx:id="txtLocalidad" promptText="Localidad" styleClass="input-agregarcentro" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+
+            <!-- CP -->
+            <Label text="C.P.:" styleClass="txt_Nombre" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
+            <TextField fx:id="txtCP" promptText="Código Postal" styleClass="input-agregarcentro" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+
+            <!-- Municipio -->
+            <Label text="Municipio:" styleClass="txt_Nombre" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
+            <TextField fx:id="txtMunicipio" promptText="Municipio" styleClass="input-agregarcentro" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+
+            <!-- Provincia -->
+            <Label text="Provincia:" styleClass="txt_Nombre" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
+            <TextField fx:id="txtProvincia" promptText="Provincia" styleClass="input-agregarcentro" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+
+            <!-- Teléfono -->
+            <Label text="Teléfono:" styleClass="txt_Nombre" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
+            <TextField fx:id="txtTelefono" promptText="Teléfono" styleClass="input-agregarcentro" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
+
+            <!-- Email -->
+            <Label text="Email:" styleClass="txt_Nombre" GridPane.rowIndex="8" GridPane.columnIndex="0"/>
+            <TextField fx:id="txtEmail" promptText="Email" styleClass="input-agregarcentro" GridPane.rowIndex="8" GridPane.columnIndex="1"/>
+        </GridPane>
+
+        <!-- Botones -->
+        <Button fx:id="btnGuardar" layoutX="100.0" layoutY="415.0" prefWidth="150.0" prefHeight="40.0" styleClass="btnGuardar" text="Guardar"/>
+        <FontAwesomeIconView glyphName="SAVE" size="18" fill="WHITE" layoutX="112.0" layoutY="440.0" styleClass="icon-guardar"/>
+
+        <Button fx:id="btnCancelar" layoutX="290.0" layoutY="415.0" prefWidth="150.0" prefHeight="40.0" styleClass="btnCancelar" text="Cancelar" onAction="#btnActionCancelar"/>
+        <FontAwesomeIconView glyphName="CLOSE" size="18" fill="WHITE" layoutX="305.0" layoutY="440.0" styleClass="icon-cancelar"/>
+
+    </children>
 </AnchorPane>
