--- a/src/main/resources/views/EditarCentroEducativo.fxml
+++ b/src/main/resources/views/EditarCentroEducativo.fxml
@@ -1,71 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 
-<AnchorPane id="AnchorPane" prefHeight="460.0" prefWidth="540.0" styleClass="panel-agregar-alumnos" stylesheets="@/styles/editarcentroeducativo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EditarCentroEducativoController">
+<AnchorPane id="panel-editar-centro" prefHeight="400.0" prefWidth="547.0" styleClass="panel-editar-centro" stylesheets="@../styles/editarcentroeducativo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EditarCentroEducativoController">
     <children>
 
         <!-- Título -->
-        <Text layoutX="120.0" layoutY="45.0" styleClass="txt_titulo_Agregar" text="Editar Centro Educativo">
+        <Text fill="WHITE" layoutX="177.0" layoutY="74.0" styleClass="txt_titulo_Editar" text="Editar Centro Educativo">
             <font>
                 <Font size="28.0" />
             </font>
         </Text>
 
         <!-- Formulario -->
-        <GridPane layoutX="50.0" layoutY="60.0" hgap="20.0" vgap="10.0" prefWidth="440.0">
+        <GridPane hgap="20.0" layoutX="146.0" layoutY="122.0" prefHeight="328.0" prefWidth="374.0" vgap="10.0">
             <padding>
-                <Insets top="10" bottom="10" left="10" right="10"/>
+                <Insets bottom="10" left="10" right="10" top="10" />
             </padding>
 
             <!-- Código Centro -->
-            <Label text="Código:" styleClass="txt_Nombre" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-            <TextField fx:id="txtCodigo" promptText="Código" styleClass="input-agregarcentro" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+            <Label alignment="TOP_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="155.0" styleClass="txt_Nombre" text="Código:" textAlignment="RIGHT" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <TextField fx:id="txtCodigo" prefHeight="25.0" prefWidth="133.0" promptText="Código" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
             <!-- Nombre -->
-            <Label text="Nombre:" styleClass="txt_Nombre" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-            <TextField fx:id="txtNombre" promptText="Nombre" styleClass="input-agregarcentro" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+            <Label alignment="TOP_RIGHT" prefHeight="23.0" prefWidth="166.0" styleClass="txt_Nombre" text="Nombre:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <TextField fx:id="txtNombre" prefHeight="25.0" prefWidth="237.0" promptText="Nombre" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
             <!-- Calle -->
-            <Label text="Calle:" styleClass="txt_Nombre" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-            <TextField fx:id="txtCalle" promptText="Calle" styleClass="input-agregarcentro" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="159.0" styleClass="txt_Nombre" text="Calle:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <TextField fx:id="txtCalle" promptText="Calle" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
             <!-- Localidad -->
-            <Label text="Localidad:" styleClass="txt_Nombre" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-            <TextField fx:id="txtLocalidad" promptText="Localidad" styleClass="input-agregarcentro" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="163.0" styleClass="txt_Nombre" text="Localidad:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+            <TextField fx:id="txtLocalidad" promptText="Localidad" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
             <!-- CP -->
-            <Label text="C.P.:" styleClass="txt_Nombre" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-            <TextField fx:id="txtCP" promptText="Código Postal" styleClass="input-agregarcentro" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="166.0" styleClass="txt_Nombre" text="C.P.:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+            <TextField fx:id="txtCP" promptText="Código Postal" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
             <!-- Municipio -->
-            <Label text="Municipio:" styleClass="txt_Nombre" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
-            <TextField fx:id="txtMunicipio" promptText="Municipio" styleClass="input-agregarcentro" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="162.0" styleClass="txt_Nombre" text="Municipio:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+            <TextField fx:id="txtMunicipio" promptText="Municipio" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
             <!-- Provincia -->
-            <Label text="Provincia:" styleClass="txt_Nombre" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
-            <TextField fx:id="txtProvincia" promptText="Provincia" styleClass="input-agregarcentro" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="165.0" styleClass="txt_Nombre" text="Provincia:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+            <TextField fx:id="txtProvincia" alignment="TOP_LEFT" promptText="Provincia" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
             <!-- Teléfono -->
-            <Label text="Teléfono:" styleClass="txt_Nombre" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
-            <TextField fx:id="txtTelefono" promptText="Teléfono" styleClass="input-agregarcentro" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
+            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="171.0" styleClass="txt_Nombre" text="Teléfono:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+            <TextField fx:id="txtTelefono" promptText="Teléfono" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="7" />
 
             <!-- Email -->
-            <Label text="Email:" styleClass="txt_Nombre" GridPane.rowIndex="8" GridPane.columnIndex="0"/>
-            <TextField fx:id="txtEmail" promptText="Email" styleClass="input-agregarcentro" GridPane.rowIndex="8" GridPane.columnIndex="1"/>
+            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="158.0" styleClass="txt_Nombre" text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+            <TextField fx:id="txtEmail" prefHeight="25.0" prefWidth="205.0" promptText="Email" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+         <columnConstraints>
+            <ColumnConstraints maxWidth="197.0" minWidth="61.0" prefWidth="162.0" />
+            <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="171.0" percentWidth="0.0" prefWidth="172.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+         </rowConstraints>
         </GridPane>
 
         <!-- Botones -->
-        <Button fx:id="btnGuardar" layoutX="100.0" layoutY="415.0" prefWidth="150.0" prefHeight="40.0" styleClass="btnGuardar" text="Guardar"/>
-        <FontAwesomeIconView glyphName="SAVE" size="18" fill="WHITE" layoutX="112.0" layoutY="440.0" styleClass="icon-guardar"/>
+        <Button fx:id="btnGuardar" layoutX="158.0" layoutY="586.0" prefHeight="40.0" prefWidth="150.0" styleClass="btnGuardar" text="Guardar" />
+        <FontAwesomeIconView fill="WHITE" glyphName="SAVE" layoutX="170.0" layoutY="611.0" size="18" styleClass="icon-guardar" />
 
-        <Button fx:id="btnCancelar" layoutX="290.0" layoutY="415.0" prefWidth="150.0" prefHeight="40.0" styleClass="btnCancelar" text="Cancelar" onAction="#btnActionCancelar"/>
-        <FontAwesomeIconView glyphName="CLOSE" size="18" fill="WHITE" layoutX="305.0" layoutY="440.0" styleClass="icon-cancelar"/>
+        <Button fx:id="btnCancelar" layoutX="372.0" layoutY="586.0" onAction="#btnActionCancelar" prefHeight="40.0" prefWidth="150.0" styleClass="btnCancelar" text="Cancelar" />
+        <FontAwesomeIconView fill="WHITE" glyphName="CLOSE" layoutX="387.0" layoutY="611.0" size="18" styleClass="icon-cancelar" />
 
     </children>
 </AnchorPane>
