--- a/src/main/resources/views/Dispositivos.fxml
+++ b/src/main/resources/views/Dispositivos.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -7,41 +8,42 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <VBox prefHeight="874.0" prefWidth="1228.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DispositivosController">
    <children>
-      <Label text="Dispositivos" />
-      <HBox prefHeight="100.0" prefWidth="200.0">
+      <Label text="Dispositivos">
+         <font>
+            <Font size="24.0" />
+         </font></Label>
+      <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="200.0" spacing="20.0">
          <children>
-            <Button fx:id="btnNuevoDispositivo" mnemonicParsing="false" onAction="#btnNuevoDispositivoAction" text="Nuevo Dispositivo" />
-            <Button fx:id="btnEliminarDispositivo" mnemonicParsing="false" onAction="#btnEliminarDispositivoAction" text="Eliminar Dispositivo" />
-            <Button fx:id="btnEliminarTodos" mnemonicParsing="false" onAction="#btnEliminarTodosAction" text="Eliminar Todos" />
+            <Button fx:id="btnNuevo" mnemonicParsing="false" onAction="#btnNuevoAction" text="Nuevo" />
+            <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#btnEliminarAction" text="Eliminar" />
          </children></HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="200.0" spacing="10.0">
          <children>
             <Label text="Buscar:" />
-            <TextField fx:id="txtBuscar" promptText="Escribe para buscar..." />
+            <TextField fx:id="txtBuscar" prefHeight="25.0" prefWidth="200.0" promptText="Escribe para buscar..." />
             <Button fx:id="btnBuscar" mnemonicParsing="false" onAction="#btnBuscarAction" text="Buscar" />
          </children></HBox>
       <TableView fx:id="tablaDisp" prefHeight="665.0" prefWidth="1228.0">
         <columns>
           <TableColumn fx:id="colCodigo" prefWidth="75.0" text="Código" />
-          <TableColumn fx:id="colNombre" prefWidth="75.0" text="Nombre" />
-            <TableColumn fx:id="colMarca" prefWidth="75.0" text="Marca" />
-            <TableColumn fx:id="colModelo" prefWidth="75.0" text="Modelo" />
+          <TableColumn fx:id="colNombre" prefWidth="74.0" text="Nombre" />
+            <TableColumn fx:id="colModelo" minWidth="0.0" prefWidth="76.0" text="Modelo" />
             <TableColumn fx:id="colNumSerie" prefWidth="75.0" text="Num_serie" />
-            <TableColumn fx:id="colCategoria" prefWidth="75.0" text="Categoría" />
             <TableColumn fx:id="colNumEti" prefWidth="75.0" text="Num_etiq" />
             <TableColumn fx:id="colMac" prefWidth="75.0" text="Mac" />
             <TableColumn fx:id="colImei" prefWidth="75.0" text="Imei" />
-            <TableColumn fx:id="colSede" prefWidth="75.0" text="Sede" />
-            <TableColumn fx:id="colEspacio" prefWidth="75.0" text="Espacio" />
             <TableColumn fx:id="colAlumno" prefWidth="75.0" text="Alumno" />
             <TableColumn fx:id="colCurso" prefWidth="75.0" text="Curso" />
-            <TableColumn fx:id="colFechaAdqui" prefWidth="75.0" text="Fecha_adquisición" />
-            <TableColumn fx:id="colPrograma" prefWidth="75.0" text="Programa" />
-            <TableColumn fx:id="colProveedor" prefWidth="75.0" text="Proveedor" />
+            <TableColumn fx:id="colFechaAdqui" prefWidth="116.0" text="Fecha_adquisición" />
+            <TableColumn fx:id="colProveedor" prefWidth="94.0" text="Proveedor" />
         </columns>
       </TableView>
    </children>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 </VBox>
