--- a/src/main/resources/views/CentroEducativo.fxml
+++ b/src/main/resources/views/CentroEducativo.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -12,30 +11,18 @@
 <VBox prefHeight="580.0" prefWidth="886.0" spacing="10" style="-fx-padding: 20;" stylesheets="@../styles/tabla_alumnos.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CentroEducativoController">
 
     <!-- Título -->
-    <Label styleClass="txt_alulmnos" text="Tabla de Centros Educativos" textFill="WHITE" />
+    <Label styleClass="txt_alulmnos" text="Tabla de Centros Educativos" />
 
     <!-- Botones en línea -->
     <HBox spacing="10">
-        <Button fx:id="btnNuevoCentro" mnemonicParsing="false" onAction="#btnActionNuevoCentro" styleClass="btnNuevoAlumno" text="Nuevo Centro" textFill="WHITE">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
-            </graphic>
-        </Button>
-        <Button fx:id="btnEliminarCentro" mnemonicParsing="false" onAction="#btnActionEliminarCentro" styleClass="btnEliminarAlumnoSeleccionado" text="Eliminar Centro">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
-            </graphic>
-        </Button>
-        <Button fx:id="btnEliminarTodosCentros" mnemonicParsing="false" onAction="#btnActionEliminarTodosCentros" styleClass="btnEliminarTodosLosAlumnos" text="Eliminar Todos">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
-            </graphic>
-        </Button>
+        <Button fx:id="btnNuevoCentro" mnemonicParsing="false" onAction="#btnActionNuevoCentro" styleClass="btnNuevoAlumno" text="Nuevo Centro" />
+        <Button fx:id="btnEliminarCentro" mnemonicParsing="false" onAction="#btnActionEliminarCentro" styleClass="btnEliminarAlumnoSeleccionado" text="Eliminar Centro" />
+        <Button fx:id="btnEliminarTodosCentros" mnemonicParsing="false" onAction="#btnActionEliminarTodosCentros" styleClass="btnEliminarTodosLosAlumnos" text="Eliminar Todos" />
     </HBox>
 
     <!-- Barra de búsqueda para el centro -->
     <HBox spacing="10">
-        <Label contentDisplay="RIGHT" prefHeight="35.0" prefWidth="60.0" styleClass="txtbuscar" text="Buscar:" textAlignment="RIGHT" textFill="white" />
+        <Label contentDisplay="RIGHT" prefHeight="35.0" prefWidth="60.0" text="Buscar:" textAlignment="RIGHT" />
         <TextField fx:id="txtBuscar" prefHeight="35.0" prefWidth="423.0" promptText="Escribe para buscar..." styleClass="campo_busqueda" />
         <Button fx:id="btnBuscarCentro" onAction="#btnBuscarCentroAction" prefHeight="35.0" text="Buscar" />
     </HBox>
