--- a/src/main/resources/views/Alumnos.fxml
+++ b/src/main/resources/views/Alumnos.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -9,45 +8,33 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="580.0" prefWidth="886.0" spacing="10" style="-fx-padding: 20;" stylesheets="@../styles/tabla_alumnos.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AlumnosController">
+<VBox prefHeight="580.0" prefWidth="886.0" spacing="10" style="-fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AlumnosController">
 
     <!-- Título -->
-    <Label styleClass="txt_alulmnos" text="Tabla de Alumnos" textFill="WHITE" />
+    <Label text="Tabla de Alumnos" />
 
     <!-- Botones en línea -->
     <HBox spacing="10">
-        <Button fx:id="btnNuevoAlumno" mnemonicParsing="false" onAction="#btnActionNuevoAlumno" styleClass="btnNuevoAlumno" text="Nuevo Alumno" textFill="WHITE">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
-            </graphic>
-        </Button>
-        <Button fx:id="btnEliminarAlumno" mnemonicParsing="false" onAction="#btnActionEliminarAlumno" styleClass="btnEliminarAlumnoSeleccionado" text="Eliminar Alumno">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
-            </graphic>
-        </Button>
-        <Button fx:id="btnEliminarTodos" mnemonicParsing="false" onAction="#btnActionEliminarTodos" styleClass="btnEliminarTodosLosAlumnos" text="Eliminar Todos">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
-            </graphic>
-        </Button>
+        <Button fx:id="btnNuevoAlumno" mnemonicParsing="false" onAction="#btnActionNuevoAlumno" text="Nuevo Alumno" />
+        <Button fx:id="btnEliminarAlumno" mnemonicParsing="false" onAction="#btnActionEliminarAlumno" text="Eliminar Alumno" />
+        <Button fx:id="btnEliminarTodos" mnemonicParsing="false" onAction="#btnActionEliminarTodos" text="Eliminar Todos" />
     </HBox>
     
     <!-- Barra de búsqueda -->
- 
     <HBox spacing="10">
-        <Label contentDisplay="RIGHT" prefHeight="35.0" prefWidth="60.0" styleClass="txtbuscar" text="Buscar:" textAlignment="RIGHT" textFill="white" />
-        <TextField fx:id="txtBuscar" prefHeight="35.0" prefWidth="423.0" promptText="Escribe para buscar..." styleClass="campo_busqueda" />
+        <Label prefHeight="35.0" prefWidth="60.0" text="Buscar:" />
+        <TextField fx:id="txtBuscar" prefHeight="35.0" prefWidth="423.0" promptText="Escribe para buscar..." />
         <Button fx:id="btnBuscar" onAction="#btnBuscarAction" prefHeight="35.0" text="Buscar" />
     </HBox>
 
     <!-- Tabla -->
-    <TableView fx:id="tablaUsuarios" prefHeight="500.0" styleClass="tabla_Alumnos" VBox.vgrow="ALWAYS">
+    <TableView fx:id="tablaUsuarios" prefHeight="500.0" VBox.vgrow="ALWAYS">
         <columns>
-            <TableColumn fx:id="colCodigo" prefWidth="143.0" styleClass="Columna-Codigo" text="Código Alumno" />
-            <TableColumn fx:id="colNombre" prefWidth="221.0" styleClass="Columna-nombre" text="Nombre" />
-            <TableColumn fx:id="colCurso" prefWidth="236.0" styleClass="Columna-Curso" text="Curso" />
-            <TableColumn fx:id="colCodigoSede" prefWidth="235.0" styleClass="Columna-Sede" text="Código Sede" />
+            <TableColumn fx:id="colCodigo" prefWidth="143.0" text="Código Alumno" />
+            <TableColumn fx:id="colNombre" prefWidth="221.0" text="Nombre" />
+            <TableColumn fx:id="colCurso" prefWidth="236.0" text="Curso" />
+            <TableColumn fx:id="colCodigoSede" prefWidth="245.0" text="Código Sede" />
         </columns>
     </TableView>
+
 </VBox>
