--- a/src/main/resources/views/CentroEducativo.fxml
+++ b/src/main/resources/views/CentroEducativo.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -9,39 +8,30 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="580.0" prefWidth="886.0" spacing="10" style="-fx-padding: 20;" stylesheets="@../styles/tabla_alumnos.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CentroEducativoController">
+<VBox prefHeight="580.0" prefWidth="886.0" spacing="10" style="-fx-padding: 20;"
+      xmlns="http://javafx.com/javafx/23.0.1"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="controller.CentroEducativoController">
 
     <!-- Título -->
-    <Label styleClass="txt_alulmnos" text="Tabla de Centros Educativos" textFill="WHITE" />
+    <Label text="Tabla de Centros Educativos" />
 
-    <!-- Botones en línea -->
+    <!-- Botones -->
     <HBox spacing="10">
-        <Button fx:id="btnNuevoCentro" mnemonicParsing="false" onAction="#btnActionNuevoCentro" styleClass="btnNuevoAlumno" text="Nuevo Centro" textFill="WHITE">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
-            </graphic>
-        </Button>
-        <Button fx:id="btnEliminarCentro" mnemonicParsing="false" onAction="#btnActionEliminarCentro" styleClass="btnEliminarAlumnoSeleccionado" text="Eliminar Centro">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
-            </graphic>
-        </Button>
-        <Button fx:id="btnEliminarTodosCentros" mnemonicParsing="false" onAction="#btnActionEliminarTodosCentros" styleClass="btnEliminarTodosLosAlumnos" text="Eliminar Todos">
-            <graphic>
-                <FontAwesomeIconView fill="WHITE" glyphName="TRASH" />
-            </graphic>
-        </Button>
+        <Button fx:id="btnNuevoCentro" mnemonicParsing="false" onAction="#btnActionNuevoCentro" text="Nuevo Centro" />
+        <Button fx:id="btnEliminarCentro" mnemonicParsing="false" onAction="#btnActionEliminarCentro" text="Eliminar Centro" />
+        <Button fx:id="btnEliminarTodosCentros" mnemonicParsing="false" onAction="#btnActionEliminarTodosCentros" text="Eliminar Todos" />
     </HBox>
 
-    <!-- Barra de búsqueda para el centro -->
+    <!-- Barra de búsqueda -->
     <HBox spacing="10">
-        <Label contentDisplay="RIGHT" prefHeight="35.0" prefWidth="60.0" styleClass="txtbuscar" text="Buscar:" textAlignment="RIGHT" textFill="white" />
-        <TextField fx:id="txtBuscar" prefHeight="35.0" prefWidth="423.0" promptText="Escribe para buscar..." styleClass="campo_busqueda" />
+        <Label prefHeight="35.0" prefWidth="60.0" text="Buscar:" />
+        <TextField fx:id="txtBuscar" prefHeight="35.0" prefWidth="423.0" promptText="Escribe para buscar..." />
         <Button fx:id="btnBuscarCentro" onAction="#btnBuscarCentroAction" prefHeight="35.0" text="Buscar" />
     </HBox>
 
-    <!-- Tabla -->
-    <TableView fx:id="tablaCentroEducativos" prefHeight="500.0" styleClass="tabla_Alumnos" VBox.vgrow="ALWAYS">
+    <!-- Tabla de centros educativos -->
+    <TableView fx:id="tablaCentroEducativos" prefHeight="500.0" VBox.vgrow="ALWAYS">
         <columns>
             <TableColumn fx:id="colCodigoCentro" prefWidth="100.0" text="Código Centro" />
             <TableColumn fx:id="colNombre" prefWidth="150.0" text="Nombre" />
