--- a/src/main/resources/views/EditarCentroEducativo.fxml
+++ b/src/main/resources/views/EditarCentroEducativo.fxml
@@ -1,91 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="panel-editar-centro" prefHeight="400.0" prefWidth="547.0" styleClass="panel-editar-centro" stylesheets="@../styles/editarcentroeducativo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EditarCentroEducativoController">
-    <children>
+<BorderPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EditarCentroEducativoController">
 
-        <!-- Título -->
-        <Text fill="WHITE" layoutX="177.0" layoutY="74.0" styleClass="txt_titulo_Editar" text="Editar Centro Educativo">
-            <font>
-                <Font size="28.0" />
-            </font>
-        </Text>
+    <center>
+        <AnchorPane prefHeight="500.0" prefWidth="700.0" BorderPane.alignment="CENTER">
 
-        <!-- Formulario -->
-        <GridPane hgap="20.0" layoutX="146.0" layoutY="122.0" prefHeight="328.0" prefWidth="374.0" vgap="10.0">
-            <padding>
-                <Insets bottom="10" left="10" right="10" top="10" />
-            </padding>
+            <!-- Título centrado -->
+            <Text fill="black" layoutX="216.0" layoutY="79.0" text="Editar Centro Educativo">
+                <font>
+                    <Font size="26.0" />
+                </font>
+            </Text>
 
-            <!-- Código Centro -->
-            <Label alignment="TOP_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="155.0" styleClass="txt_Nombre" text="Código:" textAlignment="RIGHT" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <TextField fx:id="txtCodigo" prefHeight="25.0" prefWidth="133.0" promptText="Código" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <!-- Formulario en dos columnas -->
+            <HBox layoutX="97.0" layoutY="154.0" spacing="40.0">
+                <children>
 
-            <!-- Nombre -->
-            <Label alignment="TOP_RIGHT" prefHeight="23.0" prefWidth="166.0" styleClass="txt_Nombre" text="Nombre:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <TextField fx:id="txtNombre" prefHeight="25.0" prefWidth="237.0" promptText="Nombre" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <!-- Columna izquierda -->
+                    <GridPane hgap="10" vgap="12">
+                        <padding>
+                            <Insets bottom="10" left="10" right="10" top="10" />
+                        </padding>
 
-            <!-- Calle -->
-            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="159.0" styleClass="txt_Nombre" text="Calle:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <TextField fx:id="txtCalle" promptText="Calle" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Código:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                        <TextField fx:id="txtCodigo" promptText="Código" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-            <!-- Localidad -->
-            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="163.0" styleClass="txt_Nombre" text="Localidad:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-            <TextField fx:id="txtLocalidad" promptText="Localidad" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label text="Nombre:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                        <TextField fx:id="txtNombre" promptText="Nombre" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-            <!-- CP -->
-            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="166.0" styleClass="txt_Nombre" text="C.P.:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-            <TextField fx:id="txtCP" promptText="Código Postal" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label text="Calle:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                        <TextField fx:id="txtCalle" promptText="Calle" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-            <!-- Municipio -->
-            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="162.0" styleClass="txt_Nombre" text="Municipio:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-            <TextField fx:id="txtMunicipio" promptText="Municipio" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label text="Localidad:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                        <TextField fx:id="txtLocalidad" promptText="Localidad" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-            <!-- Provincia -->
-            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="165.0" styleClass="txt_Nombre" text="Provincia:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-            <TextField fx:id="txtProvincia" alignment="TOP_LEFT" promptText="Provincia" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <Label text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                        <TextField fx:id="txtEmail" promptText="Email" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <columnConstraints>
+                     <ColumnConstraints />
+                     <ColumnConstraints />
+                  </columnConstraints>
+                  <rowConstraints>
+                     <RowConstraints />
+                     <RowConstraints />
+                     <RowConstraints />
+                     <RowConstraints />
+                     <RowConstraints />
+                  </rowConstraints>
+                    </GridPane>
 
-            <!-- Teléfono -->
-            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="171.0" styleClass="txt_Nombre" text="Teléfono:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
-            <TextField fx:id="txtTelefono" promptText="Teléfono" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                    <!-- Columna derecha -->
+                    <GridPane hgap="10" vgap="12">
+                        <padding>
+                            <Insets bottom="10" left="10" right="10" top="10" />
+                        </padding>
 
-            <!-- Email -->
-            <Label alignment="TOP_RIGHT" prefHeight="17.0" prefWidth="158.0" styleClass="txt_Nombre" text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="8" />
-            <TextField fx:id="txtEmail" prefHeight="25.0" prefWidth="205.0" promptText="Email" styleClass="general-centro-editar" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-         <columnConstraints>
-            <ColumnConstraints maxWidth="197.0" minWidth="61.0" prefWidth="162.0" />
-            <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="171.0" percentWidth="0.0" prefWidth="172.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-         </rowConstraints>
-        </GridPane>
+                        <Label text="C.P.:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                        <TextField fx:id="txtCP" promptText="Código Postal" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-        <!-- Botones -->
-        <Button fx:id="btnGuardar" layoutX="158.0" layoutY="586.0" prefHeight="40.0" prefWidth="150.0" styleClass="btnGuardar" text="Guardar" />
-        <FontAwesomeIconView fill="WHITE" glyphName="SAVE" layoutX="170.0" layoutY="611.0" size="18" styleClass="icon-guardar" />
+                        <Label text="Municipio:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                        <TextField fx:id="txtMunicipio" promptText="Municipio" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-        <Button fx:id="btnCancelar" layoutX="372.0" layoutY="586.0" onAction="#btnActionCancelar" prefHeight="40.0" prefWidth="150.0" styleClass="btnCancelar" text="Cancelar" />
-        <FontAwesomeIconView fill="WHITE" glyphName="CLOSE" layoutX="387.0" layoutY="611.0" size="18" styleClass="icon-cancelar" />
+                        <Label text="Provincia:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                        <TextField fx:id="txtProvincia" promptText="Provincia" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-    </children>
-</AnchorPane>
+                        <Label text="Teléfono:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                        <TextField fx:id="txtTelefono" promptText="Teléfono" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <columnConstraints>
+                     <ColumnConstraints />
+                     <ColumnConstraints />
+                  </columnConstraints>
+                  <rowConstraints>
+                     <RowConstraints />
+                     <RowConstraints />
+                     <RowConstraints />
+                     <RowConstraints />
+                  </rowConstraints>
+                    </GridPane>
+
+                </children>
+            </HBox>
+
+            <!-- Botones -->
+            <HBox layoutX="220.0" layoutY="410.0" spacing="20.0">
+                <children>
+                    <Button fx:id="btnGuardar" prefHeight="35.0" prefWidth="120.0" text="Guardar" />
+                    <Button fx:id="btnCancelar" onAction="#btnActionCancelar" prefHeight="35.0" prefWidth="120.0" text="Cancelar" />
+                </children>
+            </HBox>
+
+        </AnchorPane>
+    </center>
+</BorderPane>
